2015-11-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Paragraph.pm: Use the correct symbol name 
	for the XS bootstrap function.  Print the name of the loaded 
	library file if debug output is on, as well as the name of the 
	bootstrap function.  Delay aliasing the loaded module to 
	Texinfo::Convert::Paragraph, as accessing the "init" function 
	right away seems not to work.

2015-11-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Makefile.am: Remove a commented-out line.
	* Texinfo/Convert/XSParagraph/configure.ac: Comment out or 
	delete messages printing results and use AC_MSG_CHECKING and 
	AS_MSG_RESULT.

2015-11-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/Makefile.am: Remove commented-out lines and 
	formatting.

2015-10-31  Gavin Smith  <gavinsmith0123@gmail.com>

	Fix compiler warnings.
	* info/variables.h (VARIABLE_ALIST): Change type of 'value' 
	field from int * to void *.  All uses updated to cast as 
	appropriate.
	* info/variables.c (highlight_searches): Type changed to int *.
	* info/display.c (wrap_terminal_switch_rendition): Cast from 
	long * to char *.

2015-10-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/README: Remove.

2015-10-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* NEWS: Add more items.

2015-10-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* install-info/tests/defs.in: Add commented-out for running with 
	valgrind.

2015-10-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* README-hacking: Mention purposes of subdirectories, couple of 
	more checks for a release.

2015-10-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* install-info/install-info.c (parse_input): Initialize 
	missing_basename field of spec_entry structure.
	(ensure_dirfile_exists): Don't call close on a negative value.

2015-10-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (@display, @table): Move advice about using 
	@table inside @display to @table node.
	(@small...): Move later in chapter.